# Advent-of-Code-2024

./: Cargo.toml  README.md  benchmarks.md  justfile
day01/: Cargo.toml  README.md
day01/benches/: benchmark.rs
day01/src/: part1.rs  part2.rs
day02/: Cargo.toml  README.md
day02/benches/: benchmark.rs
day02/src/: part1.rs  part2.rs
day03/: Cargo.toml  README.md
day03/benches/: benchmark.rs
day03/src/: part1.rs  part2.rs
day04/: Cargo.toml  README.md
day04/benches/: benchmark.rs
day04/src/: part1.rs  part2.rs
day05/: Cargo.toml  README.md
day05/benches/: benchmark.rs
day05/src/: part1.rs  part2.rs
day06/: Cargo.toml  README.md
day06/benches/: benchmark.rs
day06/src/: part1.rs  part2.rs
day07/: Cargo.toml  README.md
day07/benches/: benchmark.rs
day07/src/: part1.rs  part2.rs
day08/: Cargo.toml  README.md
day08/benches/: benchmark.rs
day08/src/: part1.rs  part2.rs
day09/: Cargo.toml  README.md
day09/benches/: benchmark.rs
day09/src/: part1.rs  part2.rs
day10/: Cargo.toml  README.md
day11/: Cargo.toml  README.md
day12/: Cargo.toml  README.md
day13/: Cargo.toml  README.md
day14/: Cargo.toml  README.md
day15/: Cargo.toml  README.md
day16/: Cargo.toml  README.md
day17/: Cargo.toml  README.md
day18/: Cargo.toml  README.md
day19/: Cargo.toml  README.md
day20/: Cargo.toml  README.md
day21/: Cargo.toml  README.md
day21/benches/: benchmark.rs
day21/src/: part1.rs  part2.rs
day22/: Cargo.toml  README.md
day23/: Cargo.toml  README.md
day24/: Cargo.toml  README.md
day25/: Cargo.toml  README.md
(+45 files in other folders)
