[package]
name = "day21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dev-dependencies]
criterion = { workspace = true }
test-case = "3.3.1"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rayon.workspace = true
thiserror.workspace = true
